--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -4,20 +4,6 @@ import { profile } from '../../settings'
 const { fullName } = profile
 ---
 
-<footer class='footer footer-center bg-base-100 text-base-content px-4 py-8'>
-	<aside>
-		<p>
-			Copyright © {new Date().getFullYear()} - All right reserved by {fullName}
-		</p>
-		<p>
-			Built with <a
-				href='https://github.com/maiobarbero/astro_academia'
-				class='font-bold'
-				target='_blank'>Astro Academia</a
-			> 🎓 by <a
-				href='http://maiobarbero.dev'
-        class="font-bold"
-				target='_blank'>Matteo Barbero</a>
-		</p>
-	</aside>
+<footer class="text-center text-sm text-purple-700 py-6 mt-4">
+  <p>Copyright © {new Date().getFullYear()} - All rights reserved by Kazi Ashhab Rahman</p>
 </footer>
