--- a/src/components/ui/SocialIcons.astro
+++ b/src/components/ui/SocialIcons.astro
@@ -57,6 +57,27 @@ const calculatedContainerSize = activeSocial.length <= 5 ? 'size-12' : activeSoc
 		</a>
 	}
 
+	<!-- Resume -->
+	{social.resume !== '' &&
+	  <a href={social.resume} target="_blank" class={`${calculatedContainerSize} inline-flex items-center justify-center rounded-xl hover:bg-primary/20 transition-all duration-300`}>
+	    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
+	      <path fill="currentColor" d="M12 12l4 0h-2.5v0h-3v0h-2.5z">
+	        <animate fill="freeze" attributeName="d" begin="1s" dur="0.2s" values="M12 12l4 0h-2.5v0h-3v0h-2.5z;M12 19l4 -4h-2.5v-3h-3v3h-2.5Z" />
+	      </path>
+	      <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+	        <path fill="currentColor" fill-opacity="0" stroke-dasharray="64" stroke-dashoffset="64" d="M13.5 3l5.5 5.5v11.5c0 0.55 -0.45 1 -1 1h-12c-0.55 0 -1 -0.45 -1 -1v-16c0 -0.55 0.45 -1 1 -1Z">
+	          <animate fill="freeze" attributeName="fill-opacity" begin="0.8s" dur="0.15s" values="0;0.3" />
+	          <animate fill="freeze" attributeName="stroke-dashoffset" dur="0.6s" values="64;0" />
+	        </path>
+	        <path d="M14.5 3.5l2.25 2.25l2.25 2.25z" opacity="0">
+	          <animate fill="freeze" attributeName="d" begin="0.6s" dur="0.2s" values="M14.5 3.5l2.25 2.25l2.25 2.25z;M14.5 3.5l0 4.5l4.5 0z" />
+	          <set fill="freeze" attributeName="opacity" begin="0.6s" to="1" />
+	        </path>
+	      </g>
+	    </svg>
+	  </a>
+	}
+
 	<!-- Google Scholar -->
 	{social.scholar !== '' &&
 		<a href={social.scholar} target="_blank" class={`${calculatedContainerSize} inline-flex items-center justify-center rounded-xl hover:bg-primary/20 transition-all duration-300`}>
