--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+
 import { ClientRouter } from 'astro:transitions';
 
 import BetterIcon from '../components/ui/BetterIcon.astro'
@@ -12,13 +13,11 @@ import Footer from '../components/ui/Footer.astro'
 type Props = {
 	title?: string
 	description?: string
-	image?: string
 }
 
 const {
 	title = seo.default_title,
-	description = seo.default_description,
-	image = seo.default_image,
+	description = seo.default_description
 } = Astro.props
 ---
 
@@ -27,17 +26,18 @@ const {
 	<head>
 		{template.transitions && <ClientRouter /> }
 
-		<Head title={title} description={description} image={image} />
+		<Head title={title} description={description} />
 
 
 
 	</head>
-	<body>
-		<div class={`bg-base-100 drawer lg:drawer-open ${template.menu_left ? 'drawer-end' : ''}`}>
+	<body class="scroll-smooth" style="background-image: url('/bg.jpeg'); background-size: cover; background-position: center;">
+		<div class={`drawer lg:drawer-open ${template.menu_left ? 'drawer-end' : ''}`}>
 			<input id='my-drawer' type='checkbox' class='drawer-toggle' />
 			<!-- Drawer content -->
-            <div class='drawer-content bg-base-100'>
-				<div class='bg-base-100 z-50 text-base-content shadow-sm'>
+            <div class='drawer-content scroll-smooth'>
+				<Navbar />
+				<div>
 					<nav class='navbar'>
 						<div class='navbar-start'>
 							{template.menu_left &&
@@ -71,7 +71,7 @@ const {
 						</div>
 					</nav>
 				</div>
-                <main class='p-8 pt-10 lg:pt-16 lg:max-w-5xl max-w-full mx-auto min-h-screen flex flex-col justify-between'>
+                <main class='p-0 pt-0 max-w-screen-xl mx-auto min-h-screen flex flex-col justify-between'>
 					<!-- Page content -->
 					<slot />
 				<Footer />
@@ -81,7 +81,7 @@ const {
 			<div class='drawer-side z-40'>
 				<label for='my-drawer' aria-label='close sidebar' class='drawer-overlay'
 				></label>
-				<Navbar />
+				{/* <Navbar /> */}
 			</div>
 		</div>
 	</body>
