--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,6 +27,7 @@ const {
 		{template.transitions && <ClientRouter /> }
 
 		<Head title={title} description={description} />
+		<link rel="icon" href="/hokusai.png" />
 
 
 
