--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -317,7 +317,7 @@ const { fullName, title, institute, research_areas } = profile
 
 <style>
   .bg-wrapper {
-    background-image: url('/bg.jpg');
+    background-image: url('/images/bg2.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
