--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -97,6 +97,26 @@ const { fullName, title, institute, research_areas } = profile
                     </a>
                   </li>
                   <li>
+                    <a href="https://coursecatalogue.mcgill.ca/courses/comp-512/index.html" target="_blank" rel="noopener noreferrer" class="transition-transform duration-300 hover:text-purple-700 hover:font-bold transform hover:scale-110">
+                      <span>COMP 512 Advanced Algorithms</span><span class="hover-arrow">→</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://coursecatalogue.mcgill.ca/courses/comp-551/index.html" target="_blank" rel="noopener noreferrer" class="transition-transform duration-300 hover:text-purple-700 hover:font-bold transform hover:scale-110">
+                      <span>COMP 551 Applied Machine Learning</span><span class="hover-arrow">→</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://coursecatalogue.mcgill.ca/courses/comp-545/index.html" target="_blank" rel="noopener noreferrer" class="transition-transform duration-300 hover:text-purple-700 hover:font-bold transform hover:scale-110">
+                      <span>COMP 545 Topics in Deep Learning / NLP</span><span class="hover-arrow">→</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://coursecatalogue.mcgill.ca/courses/ling-545/index.html" target="_blank" rel="noopener noreferrer" class="transition-transform duration-300 hover:text-purple-700 hover:font-bold transform hover:scale-110">
+                      <span>LING 545 Advanced Topics in Linguistics</span><span class="hover-arrow">→</span>
+                    </a>
+                  </li>
+                  <li>
                     <a href="https://coursecatalogue.mcgill.ca/courses/math-222/index.html" target="_blank" rel="noopener noreferrer" class="transition-transform duration-300 hover:text-purple-700 hover:font-bold transform hover:scale-110">
                       <span>MATH 222 Calculus 3</span><span class="hover-arrow">→</span>
                     </a>
@@ -114,6 +134,11 @@ const { fullName, title, institute, research_areas } = profile
                   <li>
                     <a href="https://coursecatalogue.mcgill.ca/courses/math-324/index.html" target="_blank" rel="noopener noreferrer" class="transition-transform duration-300 hover:text-purple-700 hover:font-bold transform hover:scale-110">
                       <span>MATH 324 Statistics</span><span class="hover-arrow">→</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://coursecatalogue.mcgill.ca/courses/math-423/index.html" target="_blank" rel="noopener noreferrer" class="transition-transform duration-300 hover:text-purple-700 hover:font-bold transform hover:scale-110">
+                      <span>MATH 423 Mathematical Statistics</span><span class="hover-arrow">→</span>
                     </a>
                   </li>
                   <li>
