squashed some bugs
bugs

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -87,7 +87,7 @@ const { fullName, title, institute, research_areas } = profile
                     </a>
                   </li>
                   <li>
-                    <a href="https://www.mcgill.ca/study/2024-2025/courses/comp-345" target="_blank" rel="noopener noreferrer" class="transition-transform duration-300 hover:text-purple-700 hover:font-bold transform hover:scale-110">
+                    <a href="https://coursecatalogue.mcgill.ca/courses/comp-345/index.html" target="_blank" rel="noopener noreferrer" class="transition-transform duration-300 hover:text-purple-700 hover:font-bold transform hover:scale-110">
                       <span>COMP 345 Natural Language to Data Science</span><span class="hover-arrow">→</span>
                     </a>
                   </li>
@@ -108,12 +108,12 @@ const { fullName, title, institute, research_areas } = profile
                   </li>
                   <li>
                     <a href="https://coursecatalogue.mcgill.ca/courses/comp-545/index.html" target="_blank" rel="noopener noreferrer" class="transition-transform duration-300 hover:text-purple-700 hover:font-bold transform hover:scale-110">
-                      <span>COMP 545 Topics in Deep Learning / NLP</span><span class="hover-arrow">→</span>
+                      <span>COMP 545 Natural Language Understanding with Deep Learning</span><span class="hover-arrow">→</span>
                     </a>
                   </li>
                   <li>
                     <a href="https://coursecatalogue.mcgill.ca/courses/ling-545/index.html" target="_blank" rel="noopener noreferrer" class="transition-transform duration-300 hover:text-purple-700 hover:font-bold transform hover:scale-110">
-                      <span>LING 545 Advanced Topics in Linguistics</span><span class="hover-arrow">→</span>
+                      <span>LING 545 Computational Semantics with Neural Networks</span><span class="hover-arrow">→</span>
                     </a>
                   </li>
                   <li>
