--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -138,7 +138,7 @@ const { fullName, title, institute, research_areas } = profile
                   </li>
                   <li>
                     <a href="https://coursecatalogue.mcgill.ca/courses/math-423/index.html" target="_blank" rel="noopener noreferrer" class="transition-transform duration-300 hover:text-purple-700 hover:font-bold transform hover:scale-110">
-                      <span>MATH 423 Mathematical Statistics</span><span class="hover-arrow">→</span>
+                      <span>MATH 423 Applied Regression</span><span class="hover-arrow">→</span>
                     </a>
                   </li>
                   <li>
