--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -98,7 +98,7 @@ const { fullName, title, institute, research_areas } = profile
                   </li>
                   <li>
                     <a href="https://coursecatalogue.mcgill.ca/courses/comp-512/index.html" target="_blank" rel="noopener noreferrer" class="transition-transform duration-300 hover:text-purple-700 hover:font-bold transform hover:scale-110">
-                      <span>COMP 512 Advanced Algorithms</span><span class="hover-arrow">→</span>
+                      <span>COMP 512 Distributed Systems</span><span class="hover-arrow">→</span>
                     </a>
                   </li>
                   <li>
